--- a/source/index.html
+++ b/source/index.html
@@ -198,17 +198,17 @@
           </div>
           <span class="tablet">1999-2018 SD Service Devices</span>
           <div class="footer__item-socials">
-            <a>
+            <a href="#">
               <svg width="27" height="27">
                 <use href="sprite.svg#fb"></use>
               </svg>
             </a>
-            <a>
+            <a href="#">
               <svg width="27" height="26">
                 <use href="sprite.svg#ok"></use>
               </svg>
             </a>
-            <a>
+            <a href="#">
               <svg width="27" height="26">
                 <use href="sprite.svg#vk"></use>
               </svg>
@@ -217,7 +217,7 @@
         </div>
         <div class="footer__item footer__item--links">
           <h2>Разделы сайта</h2>
-          <button class="accordion">Разделы сайта</button>
+          <button type="button" class="accordion">Разделы сайта</button>
           <ul class="panel">
             <li><a href="#">О компании</a></li>
             <li><a href="#">Продукты</a></li>
@@ -230,7 +230,7 @@
         </div>
         <div class="footer__item footer__item--office">
           <h2>Наш офис</h2>
-          <button class="accordion">Наш офис</button>
+          <button type="button" class="accordion">Наш офис</button>
           <ul class="panel">
             <li>г. Мытищи, Олимпийский проспект, д.10</li>
             <li>+7 (495) 589-40-50</li>
@@ -248,7 +248,7 @@
     </footer>
     <section class="modal modal--hidden">
     <div class="modal__wrapper">
-      <button class="modal__close">
+      <button type="button" class="modal__close">
         <svg width="17" height="17">
           <use href="sprite.svg#close"></use>
         </svg>
