--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
       <header>
         <nav class="nav nav--closed nav--nojs">
           <div class="nav__content nav__content--left">
-            <a href="#">
+            <a>
               <svg class="logo" width="52" height="52">
                 <use href="sprite.svg#logo"></use>
               </svg>
@@ -48,7 +48,7 @@
             </div>
             <button type="button" class="nav__content-button nav__content-button--nojs">Заказать звонок
             </button>
-            <a href="#" class="nav__content-link nav__content-link--nojs">Заказать звонок</a>
+            <a href="modal.html" class="nav__content-link nav__content-link--nojs">Заказать звонок</a>
           </div>
         </nav>
       </header>
@@ -171,15 +171,16 @@
               <label class="visually-hidden" for="name">имя</label>
               <input type="text" id="name" name="name" placeholder="Имя" required>
               <label class="visually-hidden" for="tel">телефон</label>
-              <input type="tel" id="tel" name="phone_number" placeholder="Телефон" maxlength="16" required>
+              <input type="tel" id="tel" name="phone_number" placeholder="Телефон" maxlength="16" pattern="[+]7[\(]\d{3}[\)]\d{3}[\-]\d{2}[\-]\d{2}" required>
               <label class="visually-hidden" for="comment">Отзыв</label>
-              <textarea id="comment" name="comment" placeholder="Ваш вопрос" required></textarea>
-              <button type="submit">Задать вопрос</button>
-              <label for="agreement">
+              <textarea id="comment" name="comment" placeholder="Ваш вопрос"></textarea>
+               <label for="agreement">
                 <input type="checkbox" id="agreement" name="agreement" required>
                 <span></span>
                 Я согласен на обработку  персональных данных
               </label>
+              <button type="submit">Задать вопрос</button>
+
             </form>
           </div>
         </div>
@@ -235,9 +236,9 @@
           <button type="button" class="accordion accordion--nojs">Наш офис</button>
           <ul class="panel  panel--nojs">
             <li>г. Мытищи, Олимпийский проспект, д.10</li>
-            <li><a href="#">+7 (495) 589-40-50</a></li>
-            <li><a href="#">+7 (925) 003-87-67</a></li>
-            <li><a href="#">+7 (926) 926-080-79</a></li>
+            <li><a href="tel:+74955894050">+7 (495) 589-40-50</a></li>
+            <li><a href="tel:+79250038767">+7 (925) 003-87-67</a></li>
+            <li><a href="tel:+792692608079">+7 (926) 926-080-79</a></li>
           </ul>
         </div>
       </div>
@@ -250,7 +251,7 @@
     </footer>
     <section class="modal modal--hidden">
     <div class="modal__wrapper">
-      <button type="button" class="modal__close">
+      <button type="button" class="modal__close" tabindex="6">
         <svg width="17" height="17">
           <use href="sprite.svg#close"></use>
         </svg>
@@ -259,17 +260,18 @@
       <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
       <form class="form modal__form" action="https://echo.htmlacademy.ru" method="get">
         <label class="visually-hidden" for="modal__name">имя</label>
-        <input type="text" id="modal__name" name="name" placeholder="Имя" required>
+        <input type="text" id="modal__name" name="name" placeholder="Имя" required tabindex="1">
         <label class="visually-hidden" for="modal__tel">телефон</label>
-        <input type="tel" id="modal__tel" name="phone_number-modal" placeholder="Телефон" maxlength="16" required>
+        <input type="tel" id="modal__tel" name="phone_number-modal" pattern="[+]7[\(]\d{3}[\)]\d{3}[\-]\d{2}[\-]\d{2}" placeholder="Телефон" maxlength="16" required tabindex="2">
         <label class="visually-hidden" for="modal__comment">Отзыв</label>
-        <textarea id="modal__comment" name="comment" placeholder="Ваш вопрос" required></textarea>
-        <button type="submit">Отправить</button>
+        <textarea id="modal__comment" name="comment" placeholder="Ваш вопрос" tabindex="3"></textarea>
         <label for="agreement__modal">
-          <input type="checkbox" id="agreement__modal" name="agreement" required>
+          <input type="checkbox" id="agreement__modal" name="agreement" required tabindex="4">
           <span></span>
             Я согласен на обработку  персональных данных
         </label>
+        <button type="submit" tabindex="5">Отправить</button>
+
       </form>
     </div>
 
